fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,10 @@ body,
 html {
   background-color: var(--bg-color);
   height: 100%;
-  overflow: hidden;
 }
 
 .homepage-wrapper {
-  height: 100%;
+  height:100vh;
   background-image: url("./images/IMG_2119.jpeg");
   background-repeat: no-repeat;
   background-size: cover; /* Resize the background image to cover the entire container */
